--- a/package.json
+++ b/package.json
@@ -6,15 +6,22 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
+    "@tailwindcss/forms": "^0.4.0",
+    "firebase": "^9.6.3",
     "next": "latest",
+    "next-auth": "^4.0.0-beta.7",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.0",
+    "faker": "^6.6.6",
     "postcss": "^8.4.5",
+    "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^3.0.7",
     "typescript": "4.5.4"
   }
