--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^1.0.5",
     "@tailwindcss/forms": "^0.4.0",
     "firebase": "^9.6.3",
@@ -13,6 +14,8 @@
     "next-auth": "^4.0.0-beta.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-flip-move": "^3.0.4",
+    "recoil": "^0.5.2",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
